# lab-work-mathematics-computer-science-2024-MihaiMocanuFmi

1_Mini_Language/: Lab1.txt
2_Lex_Yacc/: .gitignore  CF.txt  Cmm.l  Cmm.y  Cmm_old.l  clean.sh  example  makefile  run.sh
3_Finite_Automata/FSM/: CMakeLists.txt  FSM.c  FSM.h  FSM_Parse.c  FSM_Parse.h  FSM_Reader.c  FSM_Reader.h  fsm.in  main.c
3_Finite_Automata/FSM/Bonus/: VOID.in
4_Context_Free_Grammar/: grammar.txt
